Update package.json with new dependencies and name

--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "syntx-cakes-rosegold",
+  "name": "syntx-cakes",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "vite": "^7.2.2",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
+    "vite": "^7.0.0"
   }
 }
